Fixes to custom scrollbar

--- a/DarkNightAO3.user.css
+++ b/DarkNightAO3.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name			Dark/Night Archive of Our Own
 @namespace		cicerakes
-@version		1.0.1
+@version		1.0.2
 @description	A dark/night theme for archiveofourown.org.
 @author			cicerakes
 @license		CC-BY-SA-4.0
@@ -16,8 +16,8 @@
 @var color		lCol	"Link/Button Colour" #CECECE
 @var color		tALCol	"Title/Author(s) Link Colour" #C53131
 @var select		cSb		"Custom Scrollbar" {
-	"on:Enabled": "::-webkit-scrollbar {background-color: /*[[sbBgCol]]*\/;width: 15px;}::-webkit-scrollbar-thumb {background-color: /*[[sbBCol]]*\/;}::-webkit-scrollbar-thumb:hover {background-color: /*[[sbBHCol]]*\/;}",
-	"off:Disabled": ""
+	"Enabled": "::-webkit-scrollbar{background-color:/*[[sbBgCol]]*\/;width: 15px}::-webkit-scrollbar-thumb{background-color:/*[[sbBCol]]*\/}::-webkit-scrollbar-thumb:hover{background-color:/*[[sbBHCol]]*\/}textarea::-webkit-scrollbar:vertical{border-left:1px solid #3e3e3e}textarea::-webkit-scrollbar-thumb:vertical{border-left:1px solid #3e3e3e}textarea::-webkit-scrollbar:horizontal{border-top:1px solid #3e3e3e}textarea::-webkit-scrollbar-thumb:horizontal{border-top:1px solid #3e3e3e}::-webkit-scrollbar-corner{background-color:/*[[sbBgCol]]*\/}",
+	"Disabled": ""
 }
 @var color		sbBgCol	"Scrollbar Background Colour" #262626
 @var color		sbBCol	"Scrollbar Bar Colour" rgba(86,86,86,0.4)
